update final report

--- a/20_doc/my-chapters/Question6.tex
+++ b/20_doc/my-chapters/Question6.tex
@@ -11,7 +11,17 @@ Trong đó, mỗi bộ BN (Bitonic Sort) có cấu trúc như hình:
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=.4z\linewidth]{./my-chapters/my-diagrams/Question6/Swap_and_compare.png}
+	\includegraphics[width=.4\linewidth]{./my-chapters/my-diagrams/Question6/Swap_and_compare.png}
 \end{figure}
 
 Cho các standard cell là: Cổng NOT, các cổng logic 2 ngõ vào, Mux 2-1, Mux 4-1.
+
+\answer{a}{Giả sử các mẫu ngõ vào có độ rộng là 8bit. Thiết kế mạch trên theo phương pháp đã cho và chỉ được sử dụng các standard cell trên.}
+
+\subsubsection*{Bộ so sánh 8bit}
+
+
+
+\subsubsection*{Bộ Swap 8bit}
+
+\subsubsection*{Bitonic Sort}
