update question 2 and question 6

--- a/20_doc/main.tex
+++ b/20_doc/main.tex
@@ -59,6 +59,9 @@
 \pagestyle{empty}
 \MycoverFinalProject % Cover page
 \newpage
+\pagestyle{fancy}
+\fancyhf{}
+\MycountPages{roman}
 \renewcommand{\arraystretch}{1.5} % tăng khoảng cách dòng (row height)
 \setlength{\parindent}{1cm}
 \onehalfspacing
@@ -68,7 +71,6 @@
 \listoftables
 \listoflistings
 \newpage
-\pagestyle{fancy}
 \MycountPages{number}
 \fancyhead[R]{GVHD: Nguyễn Trung Hiếu}
 \fancyfoot[L]{\includegraphics[width=.02\linewidth]{./my-chapters/my-images/logo_DEE.png}\text{ Department of Electronics}}
