--- a/20_doc/my-chapters/Question2.tex
+++ b/20_doc/my-chapters/Question2.tex
@@ -33,7 +33,7 @@ Từ bảng \ref{tab:leading-one-4bit}, ta rút gọn và có được mạch nh
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=.8\linewidth]{/home/noname/Documents/project_tiny/Ex3/20_doc/my-chapters/my-diagrams/Question2/spec.png}
+	\includegraphics[width=.8\linewidth]{./my-chapters/my-diagrams/Question2/spec.png}
 	\caption{Sơ đồ logic của bộ LOPD 4bit.}
 \end{figure}
 
@@ -41,13 +41,13 @@ Từ bộ LOPD 4-bit trên, ta triển khai bộ LOPD 8-bit và bộ LOPD 16-bit
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=.8\linewidth]{/home/noname/Documents/project_tiny/Ex3/20_doc/my-chapters/my-diagrams/Question2/LOPD_8bit.png}
+	\includegraphics[width=.8\linewidth]{./my-chapters/my-diagrams/Question2/LOPD_8bit.png}
 	\caption{Sơ đồ logic của bộ LOPD 8bit.}
 \end{figure}
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=.8\linewidth]{/home/noname/Documents/project_tiny/Ex3/20_doc/my-chapters/my-diagrams/Question2/LOPD_16bit.png}
+	\includegraphics[width=.8\linewidth]{./my-chapters/my-diagrams/Question2/LOPD_16bit.png}
 	\caption{Sơ đồ logic của bộ LOPD 16bit.}
 \end{figure}
 
@@ -55,19 +55,19 @@ Từ bộ LOPD 8-bit và LOPD 16-bit trên, ta ghép lại thành 24-bit với L
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=.8\linewidth]{/home/noname/Documents/project_tiny/Ex3/20_doc/my-chapters/my-diagrams/Question2/LOPD_24bit.png}
+	\includegraphics[width=.8\linewidth]{./my-chapters/my-diagrams/Question2/LOPD_24bit.png}
 	\caption{Sơ đồ logic của bộ LOPD 24-bit.}
 \end{figure}
 
 \answer{b}{Viết chương trình HDL mô tả mạch đã cho.}
 
-\lstinputlisting[style=StyleCode, language=SystemVerilog, caption={Chương trình mô tả LOPD 4-bit.}]{/home/noname/Documents/project_tiny/Ex3/02_rtl/Question2/LOPD_4bit.sv}
+\lstinputlisting[style=StyleCode, language=SystemVerilog, caption={Chương trình mô tả LOPD 4-bit.}]{./../02_rtl/Question2/LOPD_4bit.sv}
 
-\lstinputlisting[style=StyleCode, language=SystemVerilog, caption={Chương trình mô tả LOPD 8-bit.}]{/home/noname/Documents/project_tiny/Ex3/02_rtl/Question2/LOPD_8bit.sv}
+\lstinputlisting[style=StyleCode, language=SystemVerilog, caption={Chương trình mô tả LOPD 8-bit.}]{./../02_rtl/Question2/LOPD_8bit.sv}
 
-\lstinputlisting[style=StyleCode, language=SystemVerilog, caption={Chương trình mô tả LOPD 16-bit.}]{/home/noname/Documents/project_tiny/Ex3/02_rtl/Question2/LOPD_16bit.sv}
+\lstinputlisting[style=StyleCode, language=SystemVerilog, caption={Chương trình mô tả LOPD 16-bit.}]{./../02_rtl/Question2/LOPD_16bit.sv}
 
-\lstinputlisting[style=StyleCode, language=SystemVerilog, caption={Chương trình mô tả LOPD 24-bit.}]{/home/noname/Documents/project_tiny/Ex3/02_rtl/Question2/Question2.sv}
+\lstinputlisting[style=StyleCode, language=SystemVerilog, caption={Chương trình mô tả LOPD 24-bit.}]{./../02_rtl/Question2/Question2.sv}
 
 \answer{c}{Viết testbench cho mạch, thực hiện testbench với 100 mẫu và tính scoreboard của 100 mẫu đó.}
 
