--- a/20_doc/main.tex
+++ b/20_doc/main.tex
@@ -75,8 +75,8 @@
 \fancyhead[R]{GVHD: Nguyễn Trung Hiếu}
 \fancyfoot[L]{\includegraphics[width=.02\linewidth]{./my-chapters/my-images/logo_DEE.png}\text{ Department of Electronics}}
 
-%\include{./my-chapters/Question2.tex}
+\include{./my-chapters/Question2.tex}
 \include{./my-chapters/Question3.tex}
 \include{./my-chapters/Question5.tex}
-%\include{./my-chapters/Question6.tex}
+\include{./my-chapters/Question6.tex}
 \end{document}
